SUBDIRS = bubbles frozen-bubble snake number
gfxdir = $(datadir)/monkey-bubble/gfx
gfx_DATA = \
	looser.svg \
	tomato.svg \
	banana.svg \
	layout_1_player.svg \
	layout_2_players.svg \
	pane.svg pause.svg \
	monkeys.svg snake-body.svg \
	harm.svg lost.svg win.svg \
	monkey-bubble-icon.xpm monkey.png \
	star.svg splash.svg

EXTRA_DIST = $(gfx_DATA)
