SUBDIRS = bubbles frozen-bubble snake number
gfxdir = $(datadir)/monkey-bubble/gfx
gfx_DATA = \
	looser.svg \
	tomato.svg \
	banana.svg \
	layout_1_player.svg \
	layout_2_players.svg \
	pane.svg pause.svg \
	monkeys.svg snake-body.svg \
	harm.svg \
	harm_up.svg harm_down.svg harm_shoot.svg \
	lost.svg win.svg \
	monkey.png splash.svg star.svg

sharedgfxdir=$(datadir)/pixmaps
sharedgfx_DATA = monkey-bubble-icon.png


EXTRA_DIST = $(gfx_DATA) $(sharedgfx_DATA)
