snakedir = $(datadir)/monkey-bubble/gfx/snake

snake_DATA = \
 snake.svg \
 snake_-0.svg \
 snake_-1.svg \
 snake_-10.svg \
 snake_-11.svg \
 snake_-12.svg \
 snake_-13.svg \
 snake_-14.svg \
 snake_-15.svg \
 snake_-16.svg \
 snake_-17.svg \
 snake_-18.svg \
 snake_-19.svg \
 snake_-2.svg \
 snake_-20.svg \
 snake_-21.svg \
 snake_-22.svg \
 snake_-23.svg \
 snake_-24.svg \
 snake_-25.svg \
 snake_-26.svg \
 snake_-27.svg \
 snake_-28.svg \
 snake_-29.svg \
 snake_-3.svg \
 snake_-30.svg \
 snake_-31.svg \
 snake_-32.svg \
 snake_-33.svg \
 snake_-34.svg \
 snake_-35.svg \
 snake_-36.svg \
 snake_-37.svg \
 snake_-38.svg \
 snake_-39.svg \
 snake_-4.svg \
 snake_-40.svg \
 snake_-5.svg \
 snake_-6.svg \
 snake_-7.svg \
 snake_-8.svg \
 snake_-9.svg \
 snake_0.svg \
 snake_1.svg \
 snake_10.svg \
 snake_11.svg \
 snake_12.svg \
 snake_13.svg \
 snake_14.svg \
 snake_15.svg \
 snake_16.svg \
 snake_17.svg \
 snake_18.svg \
 snake_19.svg \
 snake_2.svg \
 snake_20.svg \
 snake_21.svg \
 snake_22.svg \
 snake_23.svg \
 snake_24.svg \
 snake_25.svg \
 snake_26.svg \
 snake_27.svg \
 snake_28.svg \
 snake_29.svg \
 snake_3.svg \
 snake_30.svg \
 snake_31.svg \
 snake_32.svg \
 snake_33.svg \
 snake_34.svg \
 snake_35.svg \
 snake_36.svg \
 snake_37.svg \
 snake_38.svg \
 snake_39.svg \
 snake_4.svg \
 snake_40.svg \
 snake_5.svg \
 snake_6.svg \
 snake_7.svg \
 snake_8.svg \
 snake_9.svg 

EXTRA_DIST = $(snake_DATA)