
NULL=


INCLUDES = \
	$(LIBMONKEY_LA_CFLAGS) \
	-Wall -Werror -g


lib_LTLIBRARIES = libmonkey.la

libmonkey_la_SOURCES = \
	bubble.c bubble.h\
	ibubble-observer.c \
	shooter.c shooter.h\
	ishooter-observer.c \
	board.c board.h\
	iboard-observer.c \
	playground.c playground.h\
	monkey.c monkey.h\
	imonkey-observer.c \
	iplayground-observer.c \
	point.h color.h 

libmonkey_la_LDFLAGS =  

libmonkey_la_LIBADD =  \
	$(LIBMONKEY_LA_LIBS)

